--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,12 +76,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create Release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           body: |
             ## Changes
             - See commit history for detailed changes
@@ -89,7 +89,7 @@ jobs:
             ## Installation
             ```bash
             # npm
-            npm install -g api-tester-mcp
+            npm install -g @kirti676/api-tester-mcp
             
             # pip
             pip install api-tester-mcp
@@ -97,7 +97,7 @@ jobs:
             
             ## Quick Start
             ```bash
-            npx api-tester-mcp --setup
+            npx @kirti676/api-tester-mcp --setup
             ```
           draft: false
           prerelease: false
