--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,10 @@ on:
     types: [published]
   workflow_dispatch:
 
+permissions:
+  contents: write  # Required for creating releases
+  packages: write  # Required for publishing packages
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -32,7 +36,7 @@ jobs:
           pip install build twine
 
       - name: Install Node.js dependencies
-        run: npm ci --ignore-scripts
+        run: npm install
 
       - name: Run tests
         run: |
@@ -112,6 +116,8 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
