feat: Add multi-language test generation support (v1.2.0)
Multi-Language Test Generation:
- TypeScript/Playwright for enterprise E2E testing
- JavaScript/Jest for popular API testing
- Python/pytest for comprehensive testing
- Python/requests for simple validation
- TypeScript/Supertest for Node.js APIs
- JavaScript/Cypress for E2E testing

Complete Project Generation:
- Full project scaffolding with dependencies
- Framework-specific configuration files
- Ready-to-run test projects with examples
- Setup instructions for each language/framework

Enhanced MCP Tools:
- get_supported_languages: List language/framework combinations
- generate_project_files: Create complete test projects
- Enhanced ingest_spec with language preferences
- Enhanced generate_test_cases with language selection

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kirti676/api-tester-mcp",
-  "version": "1.1.0",
-  "description": "MCP server for API testing with Swagger/OpenAPI and Postman collection support",
+  "version": "1.2.0",
+  "description": "Multi-language MCP server for API testing with TypeScript/Playwright, JavaScript/Jest, Python/pytest support",
   "main": "cli.js",
   "bin": "./cli.js",
   "scripts": {
@@ -19,7 +19,13 @@
     "qa",
     "sdet",
     "testing",
-    "model-context-protocol"
+    "model-context-protocol",
+    "typescript",
+    "playwright",
+    "jest",
+    "pytest",
+    "multi-language",
+    "test-generation"
   ],
   "author": "API Tester MCP <api-tester@example.com>",
   "license": "MIT",
